{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 12,
  "lineage": "f045c5e3-bde2-ef7d-08c0-29e7105a5ede",
  "resources": [
    {
      "module": "module.nginx_server_dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ngnix-server",
      "provider": "module.nginx_server_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:471112631123:instance/i-0199cd8219f95810d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0199cd8219f95810d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server-dev-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc3f1f9d58a1bbc6",
            "private_dns": "ip-172-31-41-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.76",
            "public_dns": "ec2-54-159-37-2.compute-1.amazonaws.com",
            "public_ip": "54.159.37.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a50062f89a018ba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-dev-juan"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d84b361aab091d05",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-server-dev",
              "Owner": "Juan-Devops",
              "Project": "Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-server-dev",
              "Owner": "Juan-Devops",
              "Project": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09f32a64a8b7b912a"
            ]
          },
          "dependencies": [
            "module.nginx_server_dev.aws_key_pair.nginx-server-ssh-key",
            "module.nginx_server_dev.aws_security_group.nginx-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-server-sg",
      "provider": "module.nginx_server_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112631123:security-group/sg-09f32a64a8b7b912a",
            "description": "Allow inbound traffic on port 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f32a64a8b7b912a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-dev-juan",
            "name_prefix": "",
            "owner_id": "471112631123",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0586bf8f842fe0943"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ngnix-server",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:471112631123:instance/i-07118b7be73e70943",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07118b7be73e70943",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server-qa-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b264c954b54eaa08",
            "private_dns": "ip-172-31-33-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.198",
            "public_dns": "ec2-54-147-195-77.compute-1.amazonaws.com",
            "public_ip": "54.147.195.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed3814901ff6cd20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-qa-juan"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d84b361aab091d05",
            "tags": {
              "Environment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "Juan-Devops",
              "Project": "Terraform"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "Juan-Devops",
              "Project": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01448aecdd286448c"
            ]
          },
          "dependencies": [
            "module.nginx_server_qa.aws_key_pair.nginx-server-ssh-key",
            "module.nginx_server_qa.aws_security_group.nginx-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-server-sg",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112631123:security-group/sg-01448aecdd286448c",
            "description": "Allow inbound traffic on port 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01448aecdd286448c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-qa-juan",
            "name_prefix": "",
            "owner_id": "471112631123",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0586bf8f842fe0943"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}